test/fail/basic_syntax/wrong_arg_type.lly
#[
SyntaxError: Function f, argument #1 is invalid:
Expected Type: integer
Received Type: string
    from wrong_arg_type.lly:8
]#

define f(a: integer) {} f("a")
